Ajustes no repositorio local

--- a/pedro.html
+++ b/pedro.html
@@ -1,3 +1,7 @@
 <code>
-pedro, autonomo ensino superior incompleto e jogar 
+Pedro Brito
+Sem formação
+javascript
+ler
 </code>
+Alterado no repositório local 
